Completed Valid sudoku question

--- a/exersises.ipynb
+++ b/exersises.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "20beb902-c142-457c-b76e-3ed9ec7c6d5f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "01aca062-5ef2-423a-94d1-24cb73fc0551",
    "metadata": {},
    "outputs": [],
@@ -36,6 +38,74 @@
     "    [2, 8, 7, 4, 1, 9, 6, 3, 5],\n",
     "    [3, 4, 5, 2, 8, 6, 1, 7, 9]\n",
     "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "286bf998-5de2-4e6f-8fda-f6078b57e3bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45 45 45 45 45 45 45 45 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(s, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3e711349-aa61-405d-9381-31a445b7af88",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45 45 45 45 45 45 45 45 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(s, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "39cfee27-bf9c-476d-9e39-0a17efbdd8f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VALID SUDOKU\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,9,3):\n",
+    "    for j in range(0,9,3):\n",
+    "        if s[i:i+3,j:j+3].sum() !=45:\n",
+    "            print(\"NOT a valid sudoku\")\n",
+    "            break\n",
+    "else:\n",
+    "    print(\"VALID SUDOKU\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97f6ea3c-296e-4bc9-be56-c32e25a7dc78",
+   "metadata": {},
+   "source": [
+    "demo"
    ]
   },
   {
