--- a/exersises.ipynb
+++ b/exersises.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "1a661d89-c528-4af5-9117-907f23f8dfeb",
    "metadata": {},
    "outputs": [],
@@ -137,104 +137,218 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "cc86649d-6eaf-4f29-ae82-626d87ab0412",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 3)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Get the shape of the matrix.\n"
+    "#Get the shape of the matrix.\n",
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "512ab9df-174c-473a-b85a-edcaf1694bc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18.4\n"
+     ]
+    }
+   ],
    "source": [
-    "#Find the average age of students.\n"
+    "#Find the average age of students.\n",
+    "print(np.mean(data[:,0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "id": "050a5141-ab0a-4e9d-be98-bb37d1e8bd3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[85 92 76 65 90]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Extract Math marks of all students.\n"
+    "#Extract Math marks of all students.\n",
+    "print(data[ : ,1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "05a724aa-b2b6-4c32-b1f6-03b568d87649",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95\n"
+     ]
+    }
+   ],
    "source": [
-    "#Find the highest Science mark.\n"
+    "#Find the highest Science mark.\n",
+    "print(np.max(data[ : ,2]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "58dbe813-ad7d-4bd1-af72-81f0f7cd86ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19 92 88]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Get details of the student who scored more than 90 in Math.\n",
-    "\n"
+    "print(data[data[ : ,1]>90])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "0d8d4e9f-e7aa-4926-a432-4565b3e08f27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18 90 78]\n",
+      " [19 97 88]\n",
+      " [17 81 95]\n",
+      " [18 70 70]\n",
+      " [20 95 85]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Increase Math marks of all students by 5.\n"
+    "#Increase Math marks of all students by 5.\n",
+    "data[ : ,1]+=5\n",
+    "print(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "6d3945af-91b5-4e81-ad8d-3ec3dca1119d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "#Find how many students are younger than 19.\n"
+    "#Find how many students are younger than 19.\n",
+    "print(len(data[data[ : ,0]<19]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "64134eb8-c6d1-4d0b-a19b-1d124b18cf71",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[86.6 83.2]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Calculate the average marks in each subject (column-wise mean).\n"
+    "#Calculate the average marks in each subject (column-wise mean).\n",
+    "slice=data[ : ,1:]\n",
+    "column_wise_mean=np.mean(slice, axis=0)\n",
+    "print(column_wise_mean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "0c44133f-6641-4da8-9d52-e28ee75098c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19 97 88]\n",
+      " [17 81 95]\n",
+      " [20 95 85]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Get data of students who scored at least 80 in both subjects.\n"
+    "#Get data of students who scored at least 80 in both subjects.\n",
+    "print(data[(data[:,1]>=80) & (data[:,2]>=80)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "id": "7619e559-c244-4ca1-add2-7daca65b365e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[18 90 78]\n",
+      " [19 97 88]\n",
+      " [17 81 95]\n",
+      " [18 70  0]\n",
+      " [20 95 85]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#Replace all Science marks < 75 with 0.\n"
+    "#Replace all Science marks < 75 with 0.\n",
+    "data[:,2][data[:,2]<75]=0\n",
+    "print(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb8f3e15-ec82-4142-9988-e24d9600420f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
