Imported the required python libraries

--- a/Exploratory_data_analysis.ipynb
+++ b/Exploratory_data_analysis.ipynb
@@ -1,9 +1,96 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9ccb99e3-ce9a-428f-af17-8673f0163d80",
+   "metadata": {},
+   "source": [
+    "#Exploratory Data Analysis\n",
+    "dataset: **Heart.csv**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c997e4b3-5c65-4ca4-a37a-06335528b086",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9be4948-cde9-442a-8c41-4183c9a9a8ff",
+   "id": "511bc20b-5bc7-471f-b49c-5156ec5f099f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "449a5697-0de6-4829-9bef-fa1003c48b0d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc100620-027a-498d-ade2-f2adf6579c5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b41a0d6d-a3e0-4ad7-80a7-33c333a65954",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "036292db-f646-478e-a111-74a6f8f2c622",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2441112c-2a48-44c3-8817-c092ac64a978",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aca0c7bb-aa4b-43b9-bd14-a5aa2d0309ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd97a3c9-d003-4c48-80bf-2589f0ae1824",
    "metadata": {},
    "outputs": [],
    "source": []
